<resources>
    <string name="app_name">Dolphin Chat</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="value_phone">62812345678</string>
    <string name="value_email">ariel.noah@gmail.com</string>
    <string name="value_username">Ariel Noah</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
